; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_string.c_h2o_strstr.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_string.c_h2o_strstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @h2o_strstr(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %9, align 8
  %14 = icmp uge i64 %12, %13
  br i1 %14, label %15, label %57

15:                                               ; preds = %4
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %9, align 8
  %18 = sub i64 %16, %17
  %19 = add i64 %18, 1
  store i64 %19, i64* %11, align 8
  %20 = load i64, i64* %9, align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  store i64 0, i64* %5, align 8
  br label %59

23:                                               ; preds = %15
  store i64 0, i64* %10, align 8
  br label %24

24:                                               ; preds = %53, %23
  %25 = load i64, i64* %10, align 8
  %26 = load i64, i64* %11, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %56

28:                                               ; preds = %24
  %29 = load i8*, i8** %6, align 8
  %30 = load i64, i64* %10, align 8
  %31 = getelementptr inbounds i8, i8* %29, i64 %30
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = load i8*, i8** %8, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 0
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp eq i32 %33, %37
  br i1 %38, label %39, label %52

39:                                               ; preds = %28
  %40 = load i8*, i8** %6, align 8
  %41 = load i64, i64* %10, align 8
  %42 = getelementptr inbounds i8, i8* %40, i64 %41
  %43 = getelementptr inbounds i8, i8* %42, i64 1
  %44 = load i8*, i8** %8, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 1
  %46 = load i64, i64* %9, align 8
  %47 = sub i64 %46, 1
  %48 = call i64 @memcmp(i8* %43, i8* %45, i64 %47)
  %49 = icmp eq i64 %48, 0
  br i1 %49, label %50, label %52

50:                                               ; preds = %39
  %51 = load i64, i64* %10, align 8
  store i64 %51, i64* %5, align 8
  br label %59

52:                                               ; preds = %39, %28
  br label %53

53:                                               ; preds = %52
  %54 = load i64, i64* %10, align 8
  %55 = add i64 %54, 1
  store i64 %55, i64* %10, align 8
  br label %24

56:                                               ; preds = %24
  br label %57

57:                                               ; preds = %56, %4
  %58 = load i64, i64* @SIZE_MAX, align 8
  store i64 %58, i64* %5, align 8
  br label %59

59:                                               ; preds = %57, %50, %22
  %60 = load i64, i64* %5, align 8
  ret i64 %60
}

declare dso_local i64 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
